# generic-pixel-art-scaler

./: .gitignore  App.axaml  App.axaml.cs  GenericPixelArtScaler.csproj  GenericPixelArtScaler.sln  Program.cs  README.md  ViewLocator.cs  pyproject.toml
ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Views/: AboutWindow.axaml  AboutWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MenuStrip.axaml  MenuStrip.axaml.cs  OpenButtons.axaml  OpenButtons.axaml.cs  ScaleUpDown.axaml  ScaleUpDown.axaml.cs
old/src/: about.py  img_scale.py  main.py
src/: about.py  img_scale.py  main.py  version.py
src/img/: gpas logo.aseprite
